--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,16 +1,12 @@
 ---
-
+import BaseLayout from "@/layouts/BaseLayout.astro";
+import Hero from "@/components/Hero.astro";
+import SobreMi from "../components/SobreMi.astro";
+import Contacto from "../components/Contacto.astro";
 ---
 
-<html lang="en">
-	<head>
-		<meta charset="utf-8" />
-		<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
-		<meta name="viewport" content="width=device-width" />
-		<meta name="generator" content={Astro.generator} />
-		<title>Astro</title>
-	</head>
-	<body>
-		<h1>Astro</h1>
-	</body>
-</html>
+<BaseLayout>
+	<Hero />
+	<SobreMi />
+	<Contacto />
+</BaseLayout>
