--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -9,8 +9,11 @@ const { title = "Jefry Sánchez" } = Astro.props;
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>{title}</title>
-    <meta name="description" content="Sitio web personal de Jefry Francisco Sánchez Mora, desarrollador frontend especializado en tecnologías modernas como Astro.js, React.js y más.">
-       <HeadScript />
+    <meta
+      name="description"
+      content="Sitio web personal de Jefry Francisco Sánchez Mora, desarrollador frontend especializado en tecnologías modernas como Astro.js, React.js y más."
+    />
+    <HeadScript />
   </head>
   <body class="bg-white text-gray-900 font-sans">
     <header class="p-6 text-xl font-semibold border-b border-gray-200">
@@ -18,11 +21,16 @@ const { title = "Jefry Sánchez" } = Astro.props;
     </header>
 
     <main class="px-4 py-8">
-      <slot/>
+      <slot />
     </main>
 
-    <footer class="p-4 text-center text-sm text-gray-500 border-t border-gray-200">
-      © {new Date().getFullYear()} Jefry Sánchez — <a href="/cookies" class="underline">Política de Cookies</a>
+    <footer
+      class="p-4 text-center text-sm text-gray-500 border-t border-gray-200"
+    >
+      © {new Date().getFullYear()} Jefry Sánchez — <a
+        href="/cookies"
+        class="underline">Política de Cookies</a
+      >
     </footer>
   </body>
 </html>
