--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -1,7 +1,8 @@
 ---
 import "@/styles/global.css";
 import HeadScript from "@/partials/HeadScript.astro";
-const { title = "Jefry Sánchez" } = Astro.props;
+const { title, description, canonical } = Astro.props;
+const siteUrl = import.meta.env.SITE_URL;
 ---
 
 <html lang="es">
@@ -9,9 +10,26 @@ const { title = "Jefry Sánchez" } = Astro.props;
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>{title}</title>
+    <meta name="description" content={description} />
+    <link rel="canonical" href={canonical} />
+
+    <!-- SEO Open Graph -->
+    <meta property="og:title" content={title} />
+    <meta property="og:description" content={description} />
+    <meta property="og:url" content={canonical} />
+    <meta property="og:type" content="website" />
     <meta
-      name="description"
-      content="Sitio web personal de Jefry Francisco Sánchez Mora, desarrollador frontend especializado en tecnologías modernas como Astro.js, React.js y más."
+      property="og:image"
+      content={`${siteUrl}images/opengraph/opengraph.webp`}
+    />
+
+    <!-- Twitter -->
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:title" content={title} />
+    <meta name="twitter:description" content={description} />
+    <meta
+      name="twitter:image"
+      content={`${siteUrl}images/opengraph/opengraph.webp`}
     />
     <HeadScript />
   </head>
