--- a/src/components/Cookies.astro
+++ b/src/components/Cookies.astro
@@ -48,7 +48,7 @@
         Cuando ingresás a nuestro sitio por primera vez, te mostramos un banner
         de consentimiento. Podés aceptar todas las cookies, rechazarlas o
         configurar tus preferencias. Siempre podés cambiar tu configuración
-        haciendo clic en el botón de configuración de cookies en el pie de
+        haciendo clic en el botón de configuración de cookies en el inicio de la
         página.
     </p>
 
