--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -2,6 +2,7 @@
 import BaseLayout from "@/layouts/BaseLayout.astro";
 import Hero from "@/components/Hero.astro";
 import SobreMi from "../components/SobreMi.astro";
+import Experience from "../components/Experience.astro";
 import Contacto from "../components/Contacto.astro";
 
 const siteUrl = import.meta.env.SITE_URL;
@@ -22,5 +23,6 @@ const seo = {
 >
 	<Hero />
 	<SobreMi />
+	<Experience />
 	<Contacto />
 </BaseLayout>
