--- a/src/components/SobreMi.astro
+++ b/src/components/SobreMi.astro
@@ -5,7 +5,7 @@
   <div class="max-w-3xl mx-auto text-center">
     <h2 class="text-3xl font-bold mb-4">Sobre mí</h2>
     <p class="text-lg mb-6">
-      Soy Ingeniero en Sistemas con más de 4 años de experiencia en desarrollo frontend. Me especializo en construir interfaces rápidas, accesibles y escalables.
+      Soy Ingeniero en Sistemas con más de 6 años de experiencia en desarrollo frontend. Me especializo en construir interfaces rápidas, accesibles y escalables.
     </p>
     <p class="text-lg mb-4">
       He trabajado con tecnologías modernas como:
@@ -14,6 +14,8 @@
       <li class="bg-blue-600 px-4 py-2 rounded-full">Next.js</li>
       <li class="bg-purple-600 px-4 py-2 rounded-full">Astro.js</li>
       <li class="bg-cyan-600 px-4 py-2 rounded-full">React.js</li>
+      <li class="bg-red-600 px-4 py-2 rounded-full">Laravel</li>
+      <li class="bg-orange-600 px-4 py-2 rounded-full">My Sql</li>
     </ul>
   </div>
 </section>
