se agrego estilos para la seccion de mi experiencia

--- a/src/components/Experience.astro
+++ b/src/components/Experience.astro
@@ -11,7 +11,8 @@
             </h3>
             <p class="text-sm text-gray-500">2023 – Actualidad</p>
             <p class="mt-1">
-                Desarrollo de landing modernas con Astro siguiendo los diseños
+                Desarrollo de landing modernas con Astro siguiendo los
+                diseños&nbsp;<br class="d-none d-md-initial" />
                 proporcionado para el sitio del grupo LAFISE.
             </p>
         </li>
@@ -21,7 +22,9 @@
             </h3>
             <p class="text-sm text-gray-500">2022 – 2023</p>
             <p class="mt-1">
-                Desarrollo de interfaces modernas con React, Angular y
+                Desarrollo de interfaces modernas con React, Angular y&nbsp;<br
+                    class="d-none d-md-initial"
+                />
                 desarrollo de Web API usando Laravel
             </p>
         </li>
@@ -29,16 +32,18 @@
             <h3 class="text-xl font-semibold">FullStack developer — Crecosa</h3>
             <p class="text-sm text-gray-500">2020 – 2022</p>
             <p class="mt-1">
-                Desarrollo de interfaces modernas con Angular, desarrollo de
-                aplicaciones web con Ionic y desarrollo de Web API con el
-                framework .NET
+                Desarrollo de interfaces modernas con Angular, desarrollo
+                de&nbsp;<br class="d-none d-md-initial" />
+                aplicaciones web con Ionic y desarrollo de Web API con el framework
+                .NET
             </p>
         </li>
         <li>
             <h3 class="text-xl font-semibold">Frontend Developer — Piki APP</h3>
             <p class="text-sm text-gray-500">2019 – 2020</p>
             <p class="mt-1">
-                Desarrollo de interfaces modernas con Angular y desarrollo de
+                Desarrollo de interfaces modernas con Angular y desarrollo
+                de&nbsp;<br class="d-none d-md-initial" />
                 aplicaciones web con Ionic.
             </p>
         </li>
