se actualizaron los estilos centrales

--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -38,7 +38,7 @@ const siteUrl = import.meta.env.SITE_URL;
       <a href="/" class="hover:underline">Jefry Sánchez</a>
     </header>
 
-    <main class="px-4 py-8">
+    <main>
       <slot />
     </main>
 
